# Refactorium

./: .gitignore  README.md  implementation.md
backend/: README.md  pyproject.toml
backend/cmd/: __init__.py
backend/cmd/server/: __init__.py  http_server.py  main.py
backend/core/: __init__.py
backend/core/adapters/: __init__.py
backend/core/adapters/git_adapter/: __init__.py  adapter.py  errors.py  git_ops.py  utils.py
backend/core/agent/: __init__.py  spec.py
backend/core/agent/graph/: __init__.py  state.py  tool_loop.py
backend/core/agent/prompts/: __init__.py  duplicate_logic_refactor_prompt.py
backend/core/agent/tools/: __init__.py  langgraph_tools.py  repository.py
backend/core/common/retry/: __init__.py  retry.py
backend/core/models/: __init__.py
backend/core/models/job/: __init__.py  job.py
backend/core/models/proposal/: __init__.py  schema.py  validation.py
backend/core/models/repository/: __init__.py  errors.py  factory.py  interface.py  policy.py  snapshot.py
backend/core/models/session/: __init__.py  (+6 more)
backend/core/runtime/: __init__.py
backend/refactorium_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_agent_spec.py  test_agent_state.py  test_agent_tool_loop.py  test_agent_tools.py  test_api_server.py  test_e2e_session_snapshot_smoke.py  test_engine.py  test_proposal.py  test_proposal_validation.py  test_repository_git_adapter.py  test_repository_interface.py  test_repository_snapshot.py  test_retry.py  test_session_proposal_session.py  test_session_state.py  test_session_store.py  test_worker_service.py
(+9 files in other folders)
