[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refactorium-py"
version = "0.1.0"
description = "Python migration of Refactorium backend"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0,<4.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["refactorium*"]
